# ffld2

./: .gitignore  CMakeLists.txt  HOGPyramid.cpp  HOGPyramid.h  Intersector.h  JPEGImage.cpp  JPEGImage.h  LBFGS.cpp  LBFGS.h  Mixture.cpp  Mixture.h  Model.cpp  Model.h  Object.cpp  Object.h  Patchwork.cpp  Patchwork.h  Rectangle.cpp  Rectangle.h  Scene.cpp  Scene.h  SimpleOpt.h  test.cpp  test_faces.cpp  train.cpp  train_faces.cpp
src/: CMakeLists.txt
src/detector/: ffld_config.h  ffld_detector.cc  ffld_detector.h  generic_detector.h
src/util/: mat_jpeg_image.cc  mat_jpeg_image.h
